@startuml US1004_CD

class ToggleCourseStatusUI {

}

class ToggleCourseStatusController {
- courseListService
- courseRepository
- authorizationService
+ ToggleCourseStatusController(authorizationService, courseRepository)

+ listOpenCourses()
+ listClosedCourses()
+ listInProgressCourses()
+ toggleToPreviousCourse()
+ toggleToNextCourse()
}


class Course {
  - code
  - title
  - description
  - enrolmentLimits
  - courseState
  - courseEnrolmentState
  - createdAt
  + toDto()
  + previousState()
  + nextState()
}

class RepositoryFactory {
  + RepositoryFactory()
}

interface CourseRepository {
  + save(course)
  + findAllOpen()
  + findAllClosed()
  + findAllInProgress()
}

class CourseListService {
  - courseRepository

  + CourseService(courseRepository)
  + listClosedCourses()
  + listOpenCourses()
  + listInProgressCourses()
}

class CourseDTO {
  - code
  - title
  - description
  - enrolmentLimits
  - courseState
  - courseEnrolmentState
  - createdAt
}

class InMemoryCourseRepository {
  + save(course)
  + findAllOpen()
  + findAllClosed()
  + findAllInProgress()
}

class JpaCourseRepository {
  + save(course)
  + findAllOpen()
  + findAllClosed()
  + findAllInProgress()
}

class PersistenceContext {
  - repositories()
}


enum CourseState {
  CLOSED
  OPEN
  IN_PROGRESS
  FINISHED
}

CourseState --> Course

PersistenceContext ..> RepositoryFactory
RepositoryFactory --> CourseRepository

CourseRepository <|.. InMemoryCourseRepository
CourseRepository <|.. JpaCourseRepository
ToggleCourseStatusUI ..> PersistenceContext
ToggleCourseStatusController ..> Course
ToggleCourseStatusUI ..> ToggleCourseStatusController

CourseListService ..> Course
CourseListService ..> CourseDTO
CourseListService ..> CourseRepository

ToggleCourseStatusController --> CourseListService

@enduml
